--- a/calculadora/templates/base.html
+++ b/calculadora/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="{{ url_for('static', filename='image/tri.png') }}">
+    <link rel="icon" href="{{ url_for('static', filename='image/calc.png') }}">
 
     <!-- SEO Tags -->
     <meta name="description" content="Running Pace Converter é uma ferramenta online que ajuda a converter o ritmo de corrida em diferentes unidades. Desenvolvido por Thiarly Cavalcante.">
@@ -121,8 +121,6 @@
       >
     </div>
   </footer>
-
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script> document.getElementById('copyrightYear').textContent = new Date().getFullYear();</script>
 </body>
 </html>
