--- a/calculadora/templates/calculadora.html
+++ b/calculadora/templates/calculadora.html
@@ -14,7 +14,7 @@
             <input id="nome" type="text" name="nome" placeholder="Nome" required class="p-2 mb-2 rounded">
             
             <label for="dinheiro_inicial" class="block mb-1">Investimento Inicial:</label>
-            <input id="dinheiro_inicial" type="text" name="dinheiro_inicial" placeholder="R$ 0,00" required class="p-2 mb-2 rounded" onblur="reformatCurrency(this)">
+            <input id="dinheiro_inicial" type="text" name="dinheiro_inicial" placeholder="R$ 0,00" required class="p-2 mb-2 rounded" oninput="realTimeCurrencyFormat(this)">
             
             <label for="tempo_desejado" class="block mb-1">Tempo Desejado (em meses):</label>
             <input id="tempo_desejado" type="number" name="tempo_desejado" placeholder="Tempo Desejado" required class="p-2 mb-2 rounded">
@@ -23,10 +23,10 @@
             <input id="taxa" type="number" step="0.1" name="taxa" placeholder="Taxa (ex: 5 para 5%)" required class="p-2 mb-2 rounded">
             
             <label for="aporte" class="block mb-1">Aporte Mensal:</label>
-            <input id="aporte" type="text" name="aporte" placeholder="R$ 0,00" required class="p-2 mb-2 rounded" onblur="reformatCurrency(this)">
+            <input id="aporte" type="text" name="aporte" placeholder="R$ 0,00" required class="p-2 mb-2 rounded" oninput="realTimeCurrencyFormat(this)">
             
             <label for="salario_desejado" class="block mb-1">Salário Desejado:</label>
-            <input id="salario_desejado" type="text" name="salario_desejado" placeholder="R$ 0,00" required class="p-2 mb-2 rounded" onblur="reformatCurrency(this)">
+            <input id="salario_desejado" type="text" name="salario_desejado" placeholder="R$ 0,00" required class="p-2 mb-2 rounded" oninput="realTimeCurrencyFormat(this)">
             
             <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded cursor-pointer mt-4 w-full mb-4">Calcular</button>
         </form>
@@ -34,25 +34,24 @@
 </div>
 
 <script>
-    function reformatCurrency(el) {
-        let value = el.value.replace(/R\$/g, '').replace(/\./g, '').replace(',', '.');
-        let floatValue = parseFloat(value);
-        if (!isNaN(floatValue)) {
-            el.value = new Intl.NumberFormat('pt-BR', { style: 'currency', currency: 'BRL' }).format(floatValue);
-        }
+    function realTimeCurrencyFormat(el) {
+        let value = el.value.replace(/\D/g, ""); // Remove todos os caracteres não numéricos
+        value = (value / 100).toFixed(2); // Coloca duas casas decimais
+        el.value = new Intl.NumberFormat('pt-BR', { style: 'currency', currency: 'BRL' }).format(value);
     }
-
+    
     function prepareForSubmission() {
         let elements = ['dinheiro_inicial', 'aporte', 'salario_desejado'];
-
+    
         for (let id of elements) {
             let el = document.getElementById(id);
             let value = el.value.replace(/R\$/g, '').trim().replace(/\./g, '').replace(',', '.');
-            el.value = value;
+            el.value = parseFloat(value).toFixed(2);
         }
-
+    
         return true; // isso permite que o formulário seja enviado
     }
+    
 </script>
 
 {% endblock %}
