--- a/calculadora/templates/navbar.html
+++ b/calculadora/templates/navbar.html
@@ -10,8 +10,8 @@
     <nav class="bg-white border-gray-200 dark:bg-gray-900">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
           <a href="{{url_for('calculadora_juros_compostos')}}" class="flex items-center">
-              <img src="{{ url_for('static', filename='image/calc.png')}}" class="h-8 mr-3" alt="Flowbite Logo" />
-              <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Calculadora Juros Compostos</span>
+              <img src="{{ url_for('static', filename='image/calc.png')}}" class="h-8 mr-3" alt="Juros Compostos" />
+              <span class="self-center text-lg font-semibold whitespace-nowrap dark:text-white">Calculadora Juros Compostos</span>
           </a>
           <button id="btNav" data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
@@ -26,7 +26,6 @@
           </div>
         </div>
       </nav>
-      
 </body>
 </html>
 
