--- a/calculadora/templates/resultado.html
+++ b/calculadora/templates/resultado.html
@@ -5,18 +5,24 @@
 {% endblock %}
 
 {% block content %}
-<div class="flex items-center justify-center h-auto mt-8 sm:h-screen sm:mt-2 bg-gray-100">
-    <div class="flex flex-col justify-center sm:max-w-sm md:max-w-md p-6 sm:p-12 shadow-lg rounded-3xl sm:px-12 dark:bg-white dark:text-gray-100 mb-10">
-            <h1 class="text-2xl font-semibold sm:text-3xl dark:text-black mb-6 text-center">Resultado</h1>
+<div class="flex flex-col items-center justify-between h-screen bg-gray-100">
+    <div class="flex flex-col justify-center w-full max-w-sm sm:max-w-md p-6 sm:p-12 shadow-lg rounded-3xl sm:px-12 dark:bg-white dark:text-gray-100 mt-4 mb-4 sm:mb-10">
+        <h1 class="text-2xl font-semibold sm:text-3xl dark:text-black mb-6 text-center">Resultado</h1>
 
-            {% if resultado %}
-                <div class="mt-8 p-4 bg-gray-200 rounded">
-                    <p><span>Nome: <strong>{{ resultado.nome }}</strong></span></p>
-                    <p><span>Montante: <strong>{{ resultado.montante }}</strong></span></p>
-                    <p><span>Salário Mensal: <strong>{{ resultado.salario_mensal }}</strong></span></p>
-                    <p><span>Salário Desejado: <strong>{{ resultado.salario_desejado }}</strong></span></p>
-                </div>
-            {% endif %}
-        </div>
+        {% if resultado %}
+            <div class="mt-8 p-4 bg-gray-200 rounded">
+                <p><span>Nome: <strong>{{ resultado.nome }}</strong></span></p>
+                <p><span>Montante: <strong>{{ resultado.montante }}</strong></span></p>
+                <p><span>Salário Mensal: <strong>{{ resultado.salario_mensal }}</strong></span></p>
+                <p><span>Salário Desejado: <strong>{{ resultado.salario_desejado }}</strong></span></p>
+            </div>
+        {% endif %}
     </div>
+
+    <!-- Coloque o seu footer aqui -->
+    <footer class="p-4 bg-blue-500 w-full">
+        <!-- Conteúdo do footer -->
+    </footer>
+</div>
 {% endblock %}
+
