--- a/calculadora/templates/base.html
+++ b/calculadora/templates/base.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="{{ url_for('static', filename='image/calc.png') }}">
 
     <!-- SEO Tags -->
-    <meta name="description" content="Running Pace Converter é uma ferramenta online que ajuda a converter o ritmo de corrida em diferentes unidades. Desenvolvido por Thiarly Cavalcante.">
+    <meta name="description" content="Com a calculadora de juros compostos gratuita, você fica por dentro do valor que poderá receber com juros ao fazer um investimento com aporte mensal por um determinado período e com uma taxa definida. Desenvolvido por Thiarly Cavalcante.">
     <meta name="keywords" content="Running, Pace, Converter, Corrida, Ritmo, Ferramenta, Thiarly Cavalcante">
     
     <meta name="google-site-verification" content="Emdq3b3K-vr6ylQTY4XP3XtMfG9QnXqQaSel8kOHf04" />
