--- a/calculadora/templates/calculadora.html
+++ b/calculadora/templates/calculadora.html
@@ -6,27 +6,29 @@
 
 {% block content %}
 <div class="flex items-center justify-center h-auto mt-8 sm:h-screen sm:mt-2 bg-gray-100">
-    <div class="flex flex-col justify-center sm:max-w-sm md:max-w-md p-6 sm:p-12 shadow-lg rounded-3xl sm:px-12 dark:bg-white dark:text-gray-100 mb-10">
-        <h1 class="text-2xl font-semibold sm:text-3xl dark:text-black mb-6">Calculadora</h1>
+    <div class="flex flex-col justify-center sm:max-w-sm md:max-w-md p-6 sm:p-12 shadow-lg rounded-3xl sm:px-12 dark:bg-white dark:text-gray-900 mb-10">
+        <h1 class="text-2xl font-semibold sm:text-3xl dark:text-black mb-6 transition duration-300 ease-in-out hover:text-blue-500">
+            Calculadora
+          </h1>
 
         <form method="post" action="{{ url_for('calculadora_juros_compostos') }}" onsubmit="return prepareForSubmission()">
             <label for="nome" class="block mb-1">Seu Nome:</label>
-            <input id="nome" type="text" name="nome" placeholder="Nome" required class="p-2 mb-2 rounded">
+            <input id="nome" type="text" name="nome" placeholder="Nome" required class="p-2 mb-2 border border-gray-300 rounded-md">
             
             <label for="dinheiro_inicial" class="block mb-1">Investimento Inicial:</label>
-            <input id="dinheiro_inicial" type="text" name="dinheiro_inicial" placeholder="R$ 0,00" required class="p-2 mb-2 rounded" oninput="realTimeCurrencyFormat(this)">
+            <input id="dinheiro_inicial" type="text" name="dinheiro_inicial" placeholder="R$ 0,00" required class="p-2 mb-2 border border-gray-300 rounded-md" oninput="realTimeCurrencyFormat(this)">
             
             <label for="tempo_desejado" class="block mb-1">Tempo Desejado (em meses):</label>
-            <input id="tempo_desejado" type="number" name="tempo_desejado" placeholder="Tempo Desejado" required class="p-2 mb-2 rounded">
+            <input id="tempo_desejado" type="number" name="tempo_desejado" placeholder="Tempo Desejado" required class="p-2 mb-2 border border-gray-300 rounded-md">
             
             <label for="taxa" class="block mb-1">Taxa mensal (em %):</label>
-            <input id="taxa" type="number" step="0.1" name="taxa" placeholder="Taxa (ex: 5 para 5%)" required class="p-2 mb-2 rounded">
+            <input id="taxa" type="number" step="0.1" name="taxa" placeholder="Taxa (ex: 5 para 5%)" required class="p-2 mb-2 border border-gray-300 rounded-md">
             
             <label for="aporte" class="block mb-1">Aporte Mensal:</label>
-            <input id="aporte" type="text" name="aporte" placeholder="R$ 0,00" required class="p-2 mb-2 rounded" oninput="realTimeCurrencyFormat(this)">
+            <input id="aporte" type="text" name="aporte" placeholder="R$ 0,00" required class="p-2 mb-2 border border-gray-300 rounded-md" oninput="realTimeCurrencyFormat(this)">
             
             <label for="salario_desejado" class="block mb-1">Salário Desejado:</label>
-            <input id="salario_desejado" type="text" name="salario_desejado" placeholder="R$ 0,00" required class="p-2 mb-2 rounded" oninput="realTimeCurrencyFormat(this)">
+            <input id="salario_desejado" type="text" name="salario_desejado" placeholder="R$ 0,00" required class="p-2 mb-2 border border-gray-300 rounded-md" oninput="realTimeCurrencyFormat(this)">
             
             <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded cursor-pointer mt-4 w-full mb-4">Calcular</button>
         </form>
