--- a/calculadora/templates/base.html
+++ b/calculadora/templates/base.html
@@ -8,23 +8,23 @@
 
     <!-- SEO Tags -->
     <meta name="description" content="Com a calculadora de juros compostos gratuita, você fica por dentro do valor que poderá receber com juros ao fazer um investimento com aporte mensal por um determinado período e com uma taxa definida. Desenvolvido por Thiarly Cavalcante.">
-    <meta name="keywords" content="Running, Pace, Converter, Corrida, Ritmo, Ferramenta, Thiarly Cavalcante">
+    <meta name="keywords" content="Calculadora, Juros, Compostos, Liberdade, Financeira, Investimento, Thiarly Cavalcante">
     
-    <meta name="google-site-verification" content="Emdq3b3K-vr6ylQTY4XP3XtMfG9QnXqQaSel8kOHf04" />
+    <meta name="google-site-verification" content="#" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://running-pace-converter-production.up.railway.app">
-    <meta property="og:title" content="Running Pace Converter">
-    <meta property="og:description" content="Running Pace Converter é uma ferramenta online que ajuda a converter o ritmo de corrida em diferentes unidades.">
-    <meta property="og:image" content="https://running-pace-converter-production.up.railway.app/static/image/zonas.png">
+    <meta property="og:url" content="https://calculadora-juros-compostos-production.up.railway.app">
+    <meta property="og:title" content="Calculadora de Juros Compostos">
+    <meta property="og:description" content="Calculadora de juros compostos gratuita, você fica por dentro do valor que poderá receber com juros ao fazer um investimento com aporte mensal por um determinado período e com uma taxa definida.">
+ 
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://running-pace-converter-production.up.railway.app">
-    <meta property="twitter:title" content="Running Pace Converter">
-    <meta property="twitter:description" content="Running Pace Converter é uma ferramenta online que ajuda a converter o ritmo de corrida em diferentes unidades.">
-    <meta property="twitter:image" content="https://running-pace-converter-production.up.railway.app/static/image/zonas.png">
+    <meta property="twitter:url" content="https://calculadora-juros-compostos-production.up.railway.app">
+    <meta property="twitter:title" content="Calculadora de Juros Compostos">
+    <meta property="twitter:description" content="Calculadora de juros compostos gratuita, você fica por dentro do valor que poderá receber com juros ao fazer um investimento com aporte mensal por um determinado período e com uma taxa definida.">
+
 
     <meta name="author" content="Thiarly Cavalcante">
 
