--- a/calculadora/templates/base.html
+++ b/calculadora/templates/base.html
@@ -10,7 +10,8 @@
     <meta name="description" content="Com a calculadora de juros compostos gratuita, você fica por dentro do valor que poderá receber com juros ao fazer um investimento com aporte mensal por um determinado período e com uma taxa definida. Desenvolvido por Thiarly Cavalcante.">
     <meta name="keywords" content="Calculadora, Juros, Compostos, Liberdade, Financeira, Investimento, Thiarly Cavalcante">
     
-
+    <meta name="google-site-verification" content="Emdq3b3K-vr6ylQTY4XP3XtMfG9QnXqQaSel8kOHf04" />
+    
     <meta name="author" content="Thiarly Cavalcante">
 
     <title> 
