Update logo topo

--- a/calculadora/templates/base.html
+++ b/calculadora/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="{{ url_for('static', filename='image/calc.png') }}">
+    <link rel="icon" href="{{ url_for('static', filename='image/TC.png') }}">
 
     <!-- SEO Tags -->
     <meta name="description" content="Com a calculadora de juros compostos gratuita, você fica por dentro do valor que poderá receber com juros ao fazer um investimento com aporte mensal por um determinado período e com uma taxa definida. Desenvolvido por Thiarly Cavalcante.">
