--- a/calculadora/templates/calculadora.html
+++ b/calculadora/templates/calculadora.html
@@ -7,9 +7,10 @@
 {% block content %}
 <div class="flex items-center justify-center h-auto mt-8 sm:h-screen sm:mt-2 bg-gray-100">
     <div class="flex flex-col justify-center sm:max-w-sm md:max-w-md p-6 sm:p-12 shadow-lg rounded-3xl sm:px-12 dark:bg-white dark:text-gray-900 mb-10">
-        <h1 class="text-2xl font-semibold sm:text-3xl dark:text-black mb-6 transition duration-300 ease-in-out hover:text-blue-500">
+        <h1 class="text-2xl font-semibold sm:text-3xl dark:text-black mb-4 transition duration-300 ease-in-out hover:text-blue-500">
             Calculadora
           </h1>
+          <img src="{{ url_for('static', filename='image/calc.png')}}" class="h-8 w-8 mr-3 mb-6" alt="Logo Juros Compostos" />
 
         <form method="post" action="{{ url_for('calculadora_juros_compostos') }}" onsubmit="return prepareForSubmission()">
             <label for="nome" class="block mb-1">Seu Nome:</label>
