--- a/calculadora/templates/navbar.html
+++ b/calculadora/templates/navbar.html
@@ -11,7 +11,7 @@
     <nav class="bg-white border-gray-200 dark:bg-gray-900">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
           <a href="{{url_for('calculadora_juros_compostos')}}" class="flex items-center">
-              <img src="{{ url_for('static', filename='image/calc.png')}}" class="h-8 mr-3" alt="Logo Juros Compostos" />
+              <img src="{{ url_for('static', filename='image/TC.png')}}" class="h-8 mr-3" alt="Logo Juros Compostos" />
               <span class="self-center text-base sm:text-lg font-semibold whitespace-nowrap dark:text-white">Calculadora de Juros Compostos</span>
           </a>
         </div>
